--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -144,16 +144,14 @@ CHOICE OF PHASER AND JavaScript
 
 I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and my own ability to support unstructured coding from first principles [^fp]. At this stage I introduced a simplified game template including just a character, ground, a hazard to avoid and a star to collect, illustrating some of the common tropes of a simple retro platform game [^cp].
 
-The code playground tool proved initially productive in scaffolding the beginning coding experience of participants of HTML5 games [^ht].
-Both code playground tools in P1-3 shared a similar layout which is common to code playgrounds in general.
 
 ![](./Pictures/simple_codeplayground_1.png){width=95%}
 
 Figure 5.x - Simple breakdown of code playground areas.
 
-The three areas shown in Figure 5.x represent a visual and technical structuring of a web project. [Appendix?]
+The code playground tool proved initially productive in scaffolding the beginning coding experience of participants of HTML5 games [^ht]. Both code playground tools in P1-3 shared a similar layout which is common to code playgrounds in general. The three areas shown in Figure 5.x represent a visual and technical structuring of a web project with the ability to create and upload files as assets in area a, to see and edit the code of the project at hand in area b, and a preview of the resulting web page (in this case in the form or a game) in area c [^cpl].
 
-This decision reflected my desire to support authentic engagement with real code [@chesterman_webmaking_2015]. While the affordances of the code playground ameliorated some of the barriers associated with text coding [^bb], challenges remained for P1 participants.
+The decision to use a code playground was guided by a need to provide assistance for participants given my motivation to support authentic engagement with real code [@chesterman_webmaking_2015]. While the affordances of the code playground ameliorated some of the barriers associated with text coding [^bb], challenges remained for P1 participants.
 
 
 #### Surfaced tensions and framed contradiction
@@ -169,110 +167,81 @@ These tensions reveal an underlying contradiction in the activity system between
 
 #### Design response
 
-These tensions shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a more structured **starter game template**. This included a basic working game with editable values and visible parameters for player movement, enemy speed, and image and sound assets. I also embedded comments in the code and highlighted lines intended for modification. This template was introduced by myself or other facilitators prompted learners to play the game, work out how it was broken and then to make changes to progress, building on the foundational concept of “half-baked” games [@kynigos_children_2018]. This approach also drew on the motivations and techniques of the UMC framework explored in the literature review [@lee_computational_2011], particularly the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. My approach, through a careful scaffolding of initial coding experiences, forced a rapid and early transition from the _use_ to _modify_ stages, the motivation being to address possible negative affect towards text-based coding.
 
-Alongside technical simplification, I revised facilitation practices. Rather than attempting to teach coding processes to the whole group, I encouraged peer showcasing of working solutions via extensive periods of playtesting [^3]. These moves helped to reposition my facilitation role from central control to one encouraging distributed peer support. Some learners who had struggled in P1 became sources of informal guidance for others in P2. Overall, these changes aimed to realign the activity system by mediating the contradiction between technical ambition and available support in the form of core tools used.
+These tensions shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a **starter game template** with greater scaffolding including putting key variables at the start of the game code, and embedding comments in the code highlighting lines intended for modification.
+
+<!-- THE INITIAL EXPERIENCE. -->
+
+The process involve close attention to the initial participant experience of the game code. This game template was introduced by a facilitators prompted learners to play a _broken_ game in a web page. They were asked to work out in what way the game was broken and then invited to look at the code to try to _fix_ the game (e.g to make changes to progress). Figure 5.x below shows a white square as a player, red squares are hazards to be avoided, and yellow squares are rewards which must be collected to progress to the next level. A white line is shown indicating how high the player character can jump, significantly not high enough to jump onto the blue platforms and finish the level.
+
+![Figure 5.x Simple game template - with limitation of initial jump height shown](./Pictures/simple_codeplayground_jump.png){width=95%}
+
+
+
+
+
 
 <!-- THIS IS ALSO COVERED IN C3? -->
 
-### Technical description of the core toolset
+### Technical description of the core toolset used for P2 and P3
 
-The following section outlines a technical description of the toolset that emerged from the tensions and contradictions of Phase 1 and which was implemented in Phase 2. This is included with a significant level of detail within the chapter to allow for replicability and to allow a more situated understanding of the activities being carried out.
+The following section outlines summary a technical description of the toolset that emerged from the tensions and contradictions of Phase 1 and which was implemented in Phase 2.
 
-ADD - Signposting sentence for the following sections  at the start
+While P1 had been exploratory and had use a large set of tools, In P2 I reduced the number of tools suggested significantly.
 
+An Appendix with a greater level of detail allow for replicability by other practitioners. I offer this overview to allow the reader a greater situated understanding of the activities being carried out.
 
-#### END Summary of starting code template structural features
+<!-- ADD - Signposting sentence for the following sections  at the start
 
-THAT COULD BE A TABLE (OR DEVELOPED) for Chapter
+THAT COULD BE A TABLE (OR DEVELOPED) for Chapter -->
 
 **Code playground:** The use of the code playground helped by providing the following: a place the starting template could be viewed and played. A remix button, which when clicked created a new version of the project that could be adapted.
 
-**Simplified file structure:** The file structure was simplified so that participants were shown only the game.js file.
+**Simplified file structure:** The overall file structure was simplified so that participants only needed to alter the game.js file. Within that file, an older version of Phaser.js was used allowing simplified syntax in object and functions construction [^this].
 
-**Variables at the start of the document:** In tandem with the use of a side by side view of game and code in the interface, small changes in those variables created rapid feedback responses and large changes in the game.
-
-**Piskel as an accessible tool size:** more on this or drop?
-
-**Graphical structuring of the level design using text code:** Changes to level design were highly scaffolded to mimic a tile map approach using text code arrays and regular block graphics.
-
-**Careful design to allow for default Piskel size:**
-The size of the pixels 32 x32
+**Variables at the start of the document:** Small changes in variables at the start of the JavaScript game file created rapid feedback responses and large changes in the game. The starter game templates included the following elements: editable values and visible parameters for player movement, enemy speed, and image and sound assets.
 
 
-
-##### Code playground environment
-
-The use of a code playground and starting template, while technically two separate tools, were experienced by participants as a holistic experience [^4].  The use of code playgrounds by novices can mitigate against some of the initial challenges provided by learning computer coding stemming from  unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004].
-
-SIMPLIFY OR DEVELOP - Tactics to address challenging elements include steps to reduce syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
-
-The project consists of several interlinked code and asset files (see glossary & Appendix 5.tech).
-
-![simple game template](./Pictures/illustrations/template_annot.png){width=95%}
-
-Figure 5.code : Summary of the features of the glitch code playground environment and game template - APOLOGIES THIS IS INCOMPLETE CURRENTLY
-
-1. Javascript file which participants alter to make changes to their game
-2. Html page within which the game is embeded (not usually altered by participants)
-3. Css style sheet (not usually altered by participants)
-4. Code editing area
-5. Game preview area
-
-The Glitch.com code editing tool had three main areas. First, on the left, there were options to change project settings, an assets link to manage image and audio files, and a list of project files, including JavaScript, HTML, and CSS. Second, in the central code window, participants could view and edit the code and comments. Third, on the right, a game preview displayed the immediate updates resulting from changes made to the code in the central window.
-
-#### Code variables and structure
-
-In P1, after delays caused by lack of coding knowledge, I had guided participants to begin their games by using a very partial template based on an online tutorial. As the process continued, it became apparent that the starting template greatly shaped the following design possibilities. To address this, in the development period between P1 and P2, I redesigned the starting code template of a game with a greater attention to pedagogical concerns in the following ways: I made changes to the code to reduce obscure syntax where possible increasing code readability and simplifying the structure of inter-related functions to facilitate the process of adding new code structures and code snippets. The choice to pre-select a particular genre, specifically a _platformer_ game (see glossary), was a pragmatic response to reducing the tension caused by diverse help requests, which narrowed the range of game features that would be requested. A summary of how these concerns were implemented in the design process follows (see Appendix 5.tech. for a fuller description).
-
-#### Graphical asset scaffolding
-
-Turning to the use of graphical assets, the starting template was altered to facilitate and encourage the process of adding designs created by participants. Initial graphical assets consisted of colour blocks, a design choice inviting learners to develop game characters from a clean slate (see Figure 5.px). To help resolve the overly complicated use of multiple asset creation tools, I prioritised the use of the pixel art tool Piskel, as I evaluated it to be intuitive for many younger participants. In P2, participants were guided to make a game on a broadly environmental theme, participants often redesigned sprites to games involving animals. Figure 5.fish shows a whale as a player character and plastic bottles as a hazard and fish as an item to collect.
+**Blocks graphics and use of Piskel:** Generic colour blocks in the starting template and encourage the process of adding designs created by participants graphics created in the Piskel tool [^piskel]. The template was altered to facilitate importation of blocks of 32x32 pixels, the default project size of Piskel aiding migration. The use of this tool external to the code playground led to benefits in developing key digital literacy skills as participants needed to migrating assets from Piskel into their games via downloading to their computer and reuploading.
 
 ![Figure 5.px - Interface of Piskelapp tool](./Pictures/piskel_app_1.png){width=95%}
 
-The process of game art and audio creation opportunities seeding narrative and artistic creativity is explored in more detail - IN AN APPENDIX?
+**Graphical structuring of the level design using text code:** to align with research on the value of a visual approach to coding multi-media projects for novices [@guzdial_programming_2004; @resnick_scratch_2009], changes to level design were highly scaffolded to mimic a tile map approach using text code arrays and regular block graphics.
+in the P2 starting template the use of a graphical grid structure to edit level design shown in Fig 5.grid.
 
-![Figure 5.fish - a sample set of assets created in Piskel in the context of a working platform game created by child in P2](./Pictures/whale_1.png){width=95%}
+![Figure 5.grid - Grid based editing of level design with a simple key for hazards, coins, and platforms.](./Pictures/grid_editor_1.png){width=95%}
 
-While I made several technical adjustments to facilitate the swapping of participant graphical designs (outlined in Appendix 5.tech), the process still required a series of potentially tricky operations. While some novice code authoring tools offer self-contained solutions for audio and graphical asset creation by providing in-built authoring tools and libraries of assets, the code playground Glitch provided neither, thus requiring the use of Piskel as an external asset creation tool, complicating the process. However, this forced choice to use a distributed toolset, rather than a self-contained approach to asset management, led to benefits in developing key digital literacy skills needed for web creation. Some participants became remarkably adept at the complex process of migrating assets from Piskel into their games, transforming the chain of actions involved into fluid operations. This section has focused on the rationale behind the introduction and initial expansion of the design's primary tools, rather than evidencing their subsequent impact on participants, which is explored in Chapter 6.
-
-#### Level design
-
-Addressing level design, in P1 the process was relatively complex involving changing parameters of functions to change asset location, and spiralling code complexity (see Appendix 5.chapter). Instead, to align with research on the value of a visual approach to coding multi-media projects for novices [@guzdial_programming_2004; @resnick_scratch_2009],  in the P2 starting template the use of a graphical grid structure to edit level design shown in Fig 5.grid. A minimal choice of level design elements were represented specifically; platforms to be jumped on; hazards to be avoided; and rewards to be collected.
-
-![](./Pictures/grid_editor_1.png){width=95%}
-Figure 5.grid - Grid based editing of level design with a simple key for hazards, coins, and platforms.
-
-Technically, each level is a JavaScript object consisting of a data array of 12 entries containing 17 characters which representing a matrix layout of the game. Each grid entry can be either black or one of the following: x (platform); h (hazard); o (coin). The structure of text-based array has a strong visual correlation with the resulting game layout and changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area. This solution abstracts away complexity and repetitive nature of asset placement mirroring a technique called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (see glossary and Appendix.tech).
+A greater level of detail of these design issues related to the structure of the template is included as Appendix D.1.? - and as a technical blog post [^bg1].
 
 
+##### Brief Analysis 
 
 
-#### Brief analysis
+COMPRESS AND SIGNPOST THIS NEXT BIT -
+This chapter discusses this design in relation to existing research on learning to programme through the use of supporting code templates.
 
-STRUCTURE - PERSONAL - INTER - CULTURAL?
+The design is an example of a “half-baked” games [@kynigos_children_2018], and aligns broadly with the UMC framework [@lee_computational_2011].
+In particular, the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. My approach, through a careful scaffolding of initial coding experiences, forced a rapid and early transition from the _use_ to _modify_ stages, the motivation being to address possible negative affect towards text-based coding.
 
-The scope of this section is to summarise and analyse some of the ways in which the design helped address the tensions described above. The aim is not to prove efficacy of the intervention rather than to explain its role in the iteration.
+<!--
+EDITED THESE SECTIONS DOWN - MOVED TO APPENDIX
 
-<!-- INCLUDE SOME INTERVIEW DATA IF USEFUL.
-IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
-A BIT MOE OF A SUMMARY.. -->
+Names in Appendix
 
-The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities, a tension explored in a later section [^5].
-
-
-
-While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support [^6].
-
-Vignette 1 shows Toby designing many levels as a way of making his game distinct from others. This technical adaptation thus had a knock-on impact ton the cultural aspects of the coding processes.
-
-The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group.
+- Code variables and structure
+-   Level design
+- Graphical asset scaffolding
+ -->
 
 
 ### Contradiction area 2: contradictions associated with project navigation and use of documentation
 
 #### Description of what happened
+
+<!--
+from previous version
+
+While it was clear that participants needed to develop their coding abilities, the emerging, informal, experimental nature of the learning environment seemed to me to not suit whole-class instruction. This intuition was supported by my reflections on two attempts to deliver whole group presentations of key coding concepts, which I judged in my journal, based on visual cues of engagement, to be unwelcome interruptions to participants’ making activities. Instead, I addressed problems on an individual basis. However, as  more issues arose, I became overwhelmed by the group dynamics and technical demands on my time. After one session, I emailed participants (see Appendix.narrative2), expressing that I felt daunted by the task of facilitating the integration of the disparate creative elements being produced into a cohesive project. I asked parents for ideas and support in organising and bringing more order to group and planning processes. These developing tensions can be framed as contradictions between the tools available to participants and the object of actualising their ideas and graphical assets in code form. Additionally, my limited time as a facilitator highlights a dysfunctional relationship between the division of labour and the object. -->
 
 This section outlines a contradiction associated with the introduction of supporting documentation to scaffold the game-making process.
 
@@ -281,6 +250,8 @@ In P1 my overall aim was to explore the process and to encourage personal creati
 Similarly, in terms of the creative process, the exploratory nature of P1 led to divergent creative pathways, but at a cost of a sense of an overall coherence and shared understanding of the process. In short, it felt like time to reign in the chaos.
 
 After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [^7]. I asked parents for ideas and support in organising and bringing more order to group and planning processes.  In response to my email, parents made suggestions including: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups expanded their activity by creating wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures. In addition to helping directly via coding with participants, I began to create short stand-alone instruction documents if I thought the requested code  would be useful to other groups.
+
+
 
 In the development period following P1, I reflected on the tension between learner agency, especially the role of creative autonomy, and the need for shared reference points that could support progress without constant facilitator intervention. In P1, resources to support implementation were minimal and often tied to a specific code challenge, making them unsuitable for reuse. My direct input was often needed at this stage, leading to delays and participant frustration due to the limited time I could offer each group.
 
@@ -500,7 +471,7 @@ The work of Kynigos et al. [@kynigos_children_2018] on the concept of half-baked
 
 The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way. In addition, the framework of UMC highlights the benefits of a stage-based design. In this design, this staged approach is enacted through the interaction of participants with code via increasingly sophisticated documentation. My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
 
-Turning to  design heuristics proposed by constructionist research for creative computing enviroonments [^19], of particular relevance to this design process is the principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild.
+Turning to  design heuristics proposed by constructionist research for creative computing environments [^19], of particular relevance to this design process is the principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild.
 
 Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas.
 
@@ -591,13 +562,23 @@ Gilbert is the worsted name.
 
 [^ht]: The term HTML5 games is included here as it was relevant at the time. HTML5 became a buzzword for modern webpages which included dynamic content due to the presence of JavaScript and css technology.
 
+[^cpl]: A fuller breakdown of the features of code playgrounds is included in Appendix D.1.?
+
 [^bb:] See Chapter 2 for a full summary of the challenges of text coding and the ways code playground address them. Appendix D.1 gives more detail of my evaluation of the advantages of code playgrounds.
 
 [^sp]: While I wanted participants to be able to follow their interests, this total dis-enagement with coding was not optimal as we will see in section C3.
 
 [^br]: See Chapter 2 for outlines of tinkering [@] or bricolage approaches [@bevan_learning_2015; @papert_epistemological_1990].
 
+
 [^ab]: See appendix bee for an example.
+
+
+[^this]: While a technical consideration beyond the scope of a non-technical reader this issue is significant for the participants experience. See Appendix D.1 game state for a technical exploration.
+
+[^piskel]: Piskel is a pixel art graphical editor which participant both young and old appeared to find enjoyable and intuitive. See interview ? with Mark and Ed.
+
+[^bg1]: A break down of the starter code design structure decisions and adaptations as a contribution to applied half-baked / UMC research.
 
 [^3]: Playtesting is described in Chapter 2 as
 
