Some work on c1

--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -214,15 +214,6 @@ in the P2 starting template the use of a graphical grid structure to edit level 
 A greater level of detail of these design issues related to the structure of the template is included as Appendix D.1.? - and as a technical blog post [^bg1].
 
 
-##### Brief Analysis 
-
-
-COMPRESS AND SIGNPOST THIS NEXT BIT -
-This chapter discusses this design in relation to existing research on learning to programme through the use of supporting code templates.
-
-The design is an example of a “half-baked” games [@kynigos_children_2018], and aligns broadly with the UMC framework [@lee_computational_2011].
-In particular, the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. My approach, through a careful scaffolding of initial coding experiences, forced a rapid and early transition from the _use_ to _modify_ stages, the motivation being to address possible negative affect towards text-based coding.
-
 <!--
 EDITED THESE SECTIONS DOWN - MOVED TO APPENDIX
 
@@ -233,6 +224,32 @@ Names in Appendix
 - Graphical asset scaffolding
  -->
 
+##### Brief Analysis
+
+
+COMPRESS AND SIGNPOST THIS NEXT BIT -
+This chapter discusses this design in relation to existing research on learning to programme through the use of supporting code templates.
+
+STRUCTURE - PERSONAL - INTER - CULTURAL?
+
+The scope of this section is to summarise and analyse some of the ways in which the design helped address the tensions described above. The aim is not to prove efficacy of the intervention rather than to explain its role in the iteration.
+
+<!-- INCLUDE SOME INTERVIEW DATA IF USEFUL.
+IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
+A BIT MOE OF A SUMMARY.. -->
+
+The design is an example of a “half-baked” games [@kynigos_children_2018], and aligns broadly with the UMC framework [@lee_computational_2011].
+In particular, the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. My approach, through a careful scaffolding of initial coding experiences, forced a rapid and early transition from the _use_ to _modify_ stages, the motivation being to address possible negative affect towards text-based coding.
+
+The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities, a tension explored in a later section [^5].
+
+While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support [^6].
+
+Vignette 1 shows Toby designing many levels as a way of making his game distinct from others. This technical adaptation thus had a knock-on impact ton the cultural aspects of the coding processes.
+
+The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group.
+
+SIGN POST 
 
 ### Contradiction area 2: contradictions associated with project navigation and use of documentation
 
