--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -154,9 +154,11 @@ The code playground tool proved initially productive in scaffolding the beginnin
 The decision to use a code playground was guided by a need to provide assistance for participants given my motivation to support authentic engagement with real code [@chesterman_webmaking_2015]. While the affordances of the code playground ameliorated some of the barriers associated with text coding [^bb], challenges remained for P1 participants.
 
 
-#### Surfaced tensions and framed contradiction
 
 When participants began engaging with code, several tensions quickly surfaced. The gap between participants’ desired game features and their inability to implement them in code led groups to specialise. Some participants with greater confidence or experience took on coding tasks, while others worked on graphical game assets (both digital and physical), narrative planning, or sound elements [^sp]. At this point, my ability to support participants undertaking coding activities became a limiting factor. Given the limitations of the structural starter code, learners frequently needed one-to-one help to make even minor edits. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages.  Without in-tool help or the supporting affordances provided by block coding environments participants had no  supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage.
+
+#### Surfaced tensions and framed contradiction
+
 
 The use of professional text-code language and framework, driven by  rather than a block coding approach created additional tensions. While simplified, the structure of the starting template was still relatively complex at first glance and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^br]. Many learners had ambitious ideas for their projects including that were beyond realistic scope of the novice programme [^ab]. Regarding peer learning, while some learners became aware of each other's programming work, it was difficult to adapt the bespoke code additions from one project to another.
 
@@ -167,8 +169,9 @@ These tensions reveal an underlying contradiction in the activity system between
 
 #### Design response
 
+The first response to this conflict was a non-technical one. After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [^7]. I asked parents for support in organising and bringing more order to group and planning processes. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed freeing up more of my time to support technical issues in the remaining sessions.
 
-These tensions shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a **starter game template** with greater scaffolding including putting key variables at the start of the game code, and embedding comments in the code highlighting lines intended for modification.
+In addition, these tensions outlined above shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a **starter game template** with greater scaffolding including putting key variables at the start of the game code, and embedding comments in the code highlighting lines intended for modification.
 
 <!-- THE INITIAL EXPERIENCE. -->
 
@@ -238,7 +241,9 @@ The scope of this section is to summarise and analyse some of the ways in which 
 IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
 A BIT MOE OF A SUMMARY.. -->
 
-The design is an example of a “half-baked” games [@kynigos_children_2018], and aligns broadly with the UMC framework [@lee_computational_2011].
+In P1 my overall aim was to explore the process and to encourage personal creativity using a diversity of tools. The process of selecting a reduced toolset in P2 helped address potential overload and fracturing of experience, thus reducing the possibility for peer exchange of skills and knowledge.
+
+The template design is an example of a “half-baked” games [@kynigos_children_2018], and aligns broadly with the UMC framework [@lee_computational_2011].
 In particular, the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. My approach, through a careful scaffolding of initial coding experiences, forced a rapid and early transition from the _use_ to _modify_ stages, the motivation being to address possible negative affect towards text-based coding.
 
 The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities, a tension explored in a later section [^5].
@@ -249,7 +254,7 @@ Vignette 1 shows Toby designing many levels as a way of making his game distinct
 
 The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group.
 
-SIGN POST 
+SIGN POST
 
 ### Contradiction area 2: contradictions associated with project navigation and use of documentation
 
@@ -262,34 +267,47 @@ While it was clear that participants needed to develop their coding abilities, t
 
 This section outlines a contradiction associated with the introduction of supporting documentation to scaffold the game-making process.
 
-In P1 my overall aim was to explore the process and to encourage personal creativity using a diversity of tools. The previous section, outlined the process of arriving at a reduced toolset to help address potential overload and fracturing of experience, thus reducing the possibility for peer exchange of skills and knowledge.
+Firstly, recapping from C1,
 
-Similarly, in terms of the creative process, the exploratory nature of P1 led to divergent creative pathways, but at a cost of a sense of an overall coherence and shared understanding of the process. In short, it felt like time to reign in the chaos.
+In terms of the creative process, the exploratory nature of P1 led to divergent creative pathways, but at a cost of a sense of an overall coherence and shared understanding of the process. In response I reflected on the tension between learner agency, especially the role of creative autonomy, and the need for shared reference points that could support progress without constant facilitator intervention.
 
-After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [^7]. I asked parents for ideas and support in organising and bringing more order to group and planning processes.  In response to my email, parents made suggestions including: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups expanded their activity by creating wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures. In addition to helping directly via coding with participants, I began to create short stand-alone instruction documents if I thought the requested code  would be useful to other groups.
+The changes in software tools above had been one response. In P2, the introduction of a game template approach had the unintended consequence of reducing the average size of working groups thus increasing individual coding project  projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for most learners [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC.  My direct input was often needed at this stage, thus delays and participant frustration due to the limited time I could offer each group.
 
 
+Early in P2 resources to support implementation were still often driven by specific participants request, however due to a higher similarity in underlying code structure, they were now suitable reuse. Thus, in addition to direct coding help, a small library of short stand-alone instruction documents began to accumulate.
 
-In the development period following P1, I reflected on the tension between learner agency, especially the role of creative autonomy, and the need for shared reference points that could support progress without constant facilitator intervention. In P1, resources to support implementation were minimal and often tied to a specific code challenge, making them unsuitable for reuse. My direct input was often needed at this stage, leading to delays and participant frustration due to the limited time I could offer each group.
+Groups expanded their activity by creating wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures.
 
+ADD IN A TIMELINE -
+
+By the start of P2 while the new structural template was in place, the supporting documenation was still evolving.
+
+MOVE
 In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support.
 
-The introduction of a game template approach had the unintended consequence of reducing the average size of working groups thus increasing individual coding project  projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for most learners [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC.
+<!--
+CHECK BACK FOR DUPLICATION
+After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [^7]. I asked parents for ideas and support in organising and bringing more order to group and planning processes.  In response to my email, parents made suggestions including: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. -->
 
 
 
 #### Surfaced tensions and framed contradiction
 
-In P1, I struggled reconcile a responsive approach to providing support and documentation with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs.
+A recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for facilitator-led instruction and support. This was compounded by resistance to whole-class input, which consistently yielded low engagement. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [@repenning_scalable_2015], as discussed in Chapter 2, frame this as a barrier arising from a principles-first approach. The challenge became how to support progress given my limited facilitator time, without resorting to step-by-step instructional documentation.
 
-Another recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for facilitator-led instruction and support. This was compounded by resistance to whole-class input, which consistently yielded low engagement. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [@repenning_scalable_2015], as discussed in Chapter 2, frame this as a barrier arising from a principles-first approach. The challenge became how to support progress given my limited facilitator time, without resorting to step-by-step instructional documentation.
+I struggled reconcile a responsive approach to providing support and documentation with requests from some parents asking for background concepts and explanations of coding constructs.
 
-Together, these challenges surfaced a contradiction between the object of the activity (learner-led game creation using flexible tools) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the process to develop or to reuse successful code patterns without facilitator mediation. The flexibility of the environment became a source of friction, not just a space for exploration.
-CLARIFY THIS FURTHER - TRY A DOUBLE BIND ANALYSIS?
+Together, these challenges surfaced a contradiction between the object of the activity (learner-led game creation) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the process to develop or to reuse successful code patterns without the input of facilitator mediation. The flexibility of the environment became a source of friction.
+
+This contradiction appeared to be a double bind [@Engeström], how could I introduce greater support via documentation detailing implementation and a underlying principles without compromising the responsiveness to the learner pathways that was foundational to the ethos of my approach?
 
 #### Design response
 
-The design and implementation of supporting resources evolved rapidly pace at the start of P2, resulting created three main sources of documentation: quick start cards, written instructions, and code snippets to address some of the contradictions in the learning design outlined above.
+Recalling my organisational crisis in P1 outlined in the section above, in response to my email asking for help, parents made suggestions including: use of a visible and shared list of game features that are being worked on, and documentation to support the implementation their requirements. The suggestion of the list of game features used as both an shared organisational tool, became relevant in addressing the contradiction outlined above.
+
+Early in P2 I returned to this concept to begin  design and implementation of supporting resources oriented around a list of game features which users could choose from allowing them take on features in the order that they chose.
+
+Resources evolved rapidly pace at the start of P2, resulting created three main sources of documentation: quick start cards, written instructions, and code snippets to address some of the contradictions in the learning design outlined above.
 
 ##### Quick Start Cards
 
